# mediacode

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mediacode01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mediacode01/: CameraHelper.java  MainActivity.java  MyApplication.java  VideoCodec.java
app/src/main/opencv_include/opencv2/core/: mat.hpp  types_c.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mediacode01/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
